--- a/DominoGame.Wpf/MainWindow.xaml
+++ b/DominoGame.Wpf/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:DominoGame.Wpf.Views"
         Title="Domino Block Game"
+        Icon="Assets/Images/Logo.png"
         WindowState="Maximized"
         Background="#0E2E2F">
     <views:GameView x:Name="GameHost"/>
