--- a/DominoGame.Wpf/StartMenuWindow.xaml
+++ b/DominoGame.Wpf/StartMenuWindow.xaml
@@ -9,6 +9,7 @@
         Height="420"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
+        Icon="Assets/Images/Logo.png"
         Background="#0E2E2F">
     <!-- Grid: container utama layout. -->
     <Grid>
@@ -20,6 +21,11 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
             <StackPanel>
+                <Image Source="Assets/Images/Domino.png"
+                       Height="90"
+                       Margin="0,0,0,12"
+                       Stretch="Uniform"
+                       HorizontalAlignment="Center"/>
                 <!-- TextBlock: judul aplikasi. -->
                 <TextBlock Text="Domino Block Game"
                            Foreground="#F1F7F6"
